syntax ="proto3";
package GRPC.proto;



service Serivce {

  rpc getShelf(ShelfSearchRequest) returns (Shelf);
  rpc UpdateShelf(Shelf) returns (Shelf);

  rpc CreateItemType(ItemTypeCreationRequest) returns (ItemType);
  rpc ReadItemType(ItemTypeSearchRequest) returns (ItemType);

  rpc CreateItem(ItemCreation) returns (Item);
  rpc ReadItem(ItemSearchRequest) returns (Item);
  rpc DeleteItem(ItemSearchRequest) returns (Item);

  rpc CreateUser(CreateUserRequest) returns (User);
}

message Shelf {
  string RowNo = 1;
  string ShelfNo = 2;
  double DimX = 3;
  double Dimy = 4;
  double Dimz = 5;
  repeated Item ItemsOnShelf = 6;
}

message ShelfSearchRequest{
  int32 id = 1;
}





message ItemTypeCreationRequest{
  double DimX = 1;
  double DimY = 2;
  double DimZ = 3;
}

message ItemTypeSearchRequest{
  int32 id = 1;
}

message ItemType{
  int32 id = 1;
  double DimX = 2;
  double DimY = 3;
  double DimZ = 4;
}




message ItemCreation{
  int32 ItemTypeID = 1;
  int32 ShelfID = 2;
  int32 OwnerID = 3;
}

message ItemSearchRequest{
  int32 id = 1;
}

message Item{
  ItemType type = 1;
  int32 UniqueID = 2;
  User owner = 3;
  Shelf shelf = 4;
}


message CreateUserRequest{
  int32 id = 1;
}

message User{
  int32 Id = 1;
}

